    2 loosest (conditional, naming) precedence levels from the original 7,
    and 12 of the new levels are a result of splitting and reordering
    the other 3 (prefix, dyadic infix, reducing infix) original levels.
    Just one new, loosest, level (assignment) is not from the original 7.
STILL TODO: UPDATE EXAMPLE CODE TO REFLECT NEW PRECEDENCES WHERE NEEDED.

2010-07-24

    * Muldis::D version 0.137.0 is released on CPAN as
    Muldis-D-0.137.0.tar.gz.

    * This release features a cleanup/consolidation of the operators for
    testing the membership of values in collections, or of tuples in
    relations, and a simplification of the basic order-comparison ops.

    * (PTMD_STD.pod, Interval.pod)  Remove the "between" aliases for the
    interval membership test infix ops; now just the "in" spellings remain.

    * (Ordered.pod, Interval.pod)  Updated each of the 11 functions
    "is_[before|after][|_or_same]", "min", "max", "minmax",
    "Interval.[has|value_is]_[|not_]member" to remove its optional "func"
    parameter; so now each of the 11 just has 2 or N mandatory inputs, and
    the declared type of those is now "Ordered" rather than "Universal".
    These 11 functions now unconditionally wrap the virtual
    "sys.std.Core.Ordered.order" function rather than wrapping an
    order-determination function given as an argument (or said virtual by
    default).  This change results in a simplification for 99% of likely
    use cases; for the remaining 1% which the 11 funcs have dropped support
    for, users can write their own equivalents of the 11 easily enough.

    * (PTMD_STD.pod, HDMD_Perl[6|5]_STD.pod)  Updated the grammar and
    examples of the infix special syntax of the above 11 functions to
    reflect their just being plain dyadic or commutative infix ops without
    optional parts now.  Reorganized so that the 11 are no longer in the
    separate "Order Comparison Operators" pod sub-section but rather are in