@@ -18,6 +18,8 @@
     Just one new, loosest, level (assignment) is not from the original 7.
 STILL TODO: UPDATE EXAMPLE CODE TO REFLECT NEW PRECEDENCES WHERE NEEDED.
 
+    * (D.pm)  Added declaration that Muldis D is an "Acmeist" language.
+
 2010-07-24
 
     * Muldis::D version 0.137.0 is released on CPAN as
